# GH

./: .gitignore  00_README.md  CLAUDE.md  start-claude.ps1  start-codex.bat  start-codex.ps1
01_docs/: 01_CLAUDE.md  02_MEMORY.md  03_PROJECT_RULES.md  04_WORKING_PLAN.md  05_IDEA_INBOX.md  06_DECISIONS.md
01_docs/02_PROJECT_RULES/: README.md
01_docs/03_WORKING_PLAN/: README.md  星网_1-①实现方案.md  星网_产品plan.md  星网_产品全局plan.md  星网_产品愿景草稿.md  星网_定位纠正_进行中.md  星网_实时进度.md  星网_执行思维导图.canvas  星网_执行思维导图.md  星网_执行计划.md  星网_骨架.md
01_docs/03_WORKING_PLAN/_过时归档_2026-06-11/: README.md  地基层_需求来源_创始人手搭复盘.md
01_docs/03_WORKING_PLAN/参考文档/: 星网_产品决策清单.md  星网_数据格式宪法.md  星网_记忆引擎设计.md
01_docs/04_IDEA_INBOX/: README.md
01_docs/05_DECISIONS/: README.md  星网_产品plan_v3详版_归档.md
01_docs/06_LEARNING/: 我的一周饮食计划.md  超体训练课_HarnessSelf_x_HarnessAI.md
02_frontend/: .gitignore  app.js  graph.js  index.html  package-lock.json  package.json  starnet-format.js  storage.js  style.css  sync-dist.js
02_frontend/src-tauri/: Cargo.toml  tauri.conf.json
02_frontend/src-tauri/capabilities/: default.json
02_frontend/src-tauri/icons/: icon.icns
02_frontend/src-tauri/src/: main.rs
03_backend/mcp-server/: README.md  handshake-check.js  index.js  package-lock.json  package.json  session-start-hook.js  store.js  test.js
06_scripts/: seed-8-preferences.js
